# Kimi-Vendor-Verifier

./: .env.example  .gitignore  README.md  README_zh.md  aime2025.py  eval.py  kimi_model.py  mmmu_pro_vision.py  ocr_bench.py  pyproject.toml  verify_interleaved_thinking.py  verify_params.py
validations/: kimi_test_eos.py  run_openclaw_test.py  run_vendor_img_test.py
